switch to linked asm
(cherry picked from commit 2561b7f6ec67910004f1b0c12835c580e48ab2bf)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ ff_derive = { version = "0.8", path = "ff_derive", optional = true }
 rand_core = { version = "0.6", default-features = false }
 subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
 
+[build-dependencies]
+cc = "1.0.50"
+
 [features]
 default = ["bits", "std"]
 bits = ["bitvec"]
