--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "ff"
-version = "0.5.1"
+name = "ff-zeroize"
+version = "0.6.1"
 authors = ["Sean Bowe <ewillbefull@gmail.com>"]
 description = "Library for building and interfacing with finite fields"
 readme = "README.md"
-documentation = "https://docs.rs/ff/"
-homepage = "https://github.com/ebfull/ff"
+documentation = "https://docs.rs/ff-zeroize/"
+homepage = "https://github.com/algorand/ff-zeroize"
 license = "MIT/Apache-2.0"
-repository = "https://github.com/ebfull/ff"
+repository = "https://github.com/algorand/ff-zeroize"
 edition = "2018"
 
 [dependencies]
