--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1"
-ff_derive = { version = "0.4.0", path = "ff_derive", optional = true }
+ff_derive-zeroize = { version = "0.6.2", path = "ff_derive", optional = true }
 rand_core = "0.5"
 zeroize = {version = "1.1", features = ["zeroize_derive"]}
 
 [features]
 default = []
-derive = ["ff_derive"]
+derive = ["ff_derive-zeroize"]
 
 [badges]
 maintenance = { status = "actively-developed" }
