--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ff-zeroize"
+name = "ff"
 version = "0.6.3"
 authors = ["Sean Bowe <ewillbefull@gmail.com>"]
 description = "Library for building and interfacing with finite fields"
@@ -12,13 +12,13 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1"
-ff_derive-zeroize = { version = "0.6.2", path = "ff_derive", optional = true }
+ff_derive = { version = "0.6.2", path = "ff_derive", optional = true }
 rand_core = "0.5"
 zeroize = {version = "1.1", features = ["zeroize_derive"]}
 
 [features]
 default = []
-derive = ["ff_derive-zeroize"]
+derive = ["ff_derive"]
 
 [badges]
 maintenance = { status = "actively-developed" }
