fix: ensure to compile asm only on x86_64
(cherry picked from commit 39cb448c2574bf81e48d915e8f885d5ea062f109)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ lazy_static = "1.4.0"
 rand_core = { version = "0.6", default-features = false }
 subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
 
-[build-dependencies]
+[target.'cfg(target_arch = "x86_64")'.build-dependencies]
 cc = "1.0.50"
 
 [features]
