Add PrimeField::{to_le_bits, char_le_bits}
The PrimeField::ReprBits associated type is used to specify the backing
array used by bitvec's BitArray struct. Once const-generics stabilise,
the changes to BitArray will enable these APIs to return a type of the
form BitArray<Lsb0, Self::BitStore, Self::NUM_BITS>.

We could add big-endian APIs later, but with the current API,
PrimeField::to_le_bits().into_repr().rev() will iterate over the bits in
big-endian order.

The MSRV is now 1.44.0, matching the bitvec crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/ebfull/ff"
 edition = "2018"
 
 [dependencies]
+bitvec = { version = "0.18", default-features = false }
 byteorder = { version = "1", default-features = false }
 ff_derive = { version = "0.7", path = "ff_derive", optional = true }
 rand_core = { version = "0.5", default-features = false }
