--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,9 @@ default = ["std"]
 derive = ["ff_derive"]
 std = []
 
+[[test]]
+name = "derive"
+required-features = ["derive"]
+
 [badges]
 maintenance = { status = "actively-developed" }
