Add `bits` feature; factor out PrimeFieldBits
Makes `bitvec` an optional dependency by factoring the types and methods
which depend on it into their own trait.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,11 @@ jobs:
         with:
           command: build
           args: --verbose --target thumbv6m-none-eabi --no-default-features
+      - name: Build with bits feature
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --verbose --target thumbv6m-none-eabi --no-default-features --features bits
 
   doc-links:
     name: Nightly lint
