--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bitvec = { version = "0.22", default-features = false, optional = true }
 byteorder = { version = "1", default-features = false, optional = true }
 ff_derive = { version = "0.11", path = "ff_derive", optional = true }
 rand_core = { version = "0.6", default-features = false }
-subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
+subtle = { package = "subtle-ng", version = "2.2", default-features = false, features = ["i128"] }
 
 [features]
 default = ["bits", "std"]
