--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ alloc = []
 bits = ["bitvec"]
 derive = ["byteorder", "ff_derive"]
 std = ["alloc"]
+# with MSRV 1.60 this could be merged into bits with ff_derive?/bits
+# see PR#72 for more information.
+derive_bits = ["bits", "ff_derive/bits"]
 
 [[test]]
 name = "derive"
