--- a/ff_derive/Cargo.toml
+++ b/ff_derive/Cargo.toml
@@ -12,6 +12,10 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/zkcrypto/ff"
 edition = "2018"
 
+[features]
+# enabled when generating bitvec code utilizing the version of ff's bitvec
+bits = []
+
 [lib]
 proc-macro = true
 
