--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,11 @@ jobs:
         with:
           command: test
           args: --verbose --all-features
+      - name: Run tests (without bitvec)
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --verbose --no-default-features --features derive
 
   no-std:
     name: Check no-std compatibility
