refactor: prettify conditional code with cfg_if

--- a/ff_derive/Cargo.toml
+++ b/ff_derive/Cargo.toml
@@ -27,6 +27,7 @@ num-integer = "0.1"
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "1", features = ["full"] }
+cfg-if = "1"
 
 [badges]
 maintenance = { status = "passively-maintained" }
