--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,22 +77,20 @@ jobs:
           args: --verbose --target thumbv6m-none-eabi --no-default-features --features bits
 
   doc-links:
-    name: Nightly lint
+    name: Documentation
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: 1.51.0
           override: true
       - name: cargo fetch
         uses: actions-rs/cargo@v1
         with:
           command: fetch
 
-      # Ensure intra-documentation links all resolve correctly
-      # Requires #![deny(intra_doc_link_resolution_failure)] in crate.
       - name: Check intra-doc links
         uses: actions-rs/cargo@v1
         with:
