feat: add `GpuName` trait bounds when `gpu` feature is enabled
When the `gpu` feature is enabled, the `GpuName` trait from `ec-gpu`
is added to the trait bounds of `Field`.

This makes the trait bounds of projects wanting to support GPUs way
easier. The `Gpu*` traits won't bleed into the whole API. Conditional
trait bounds like this

    impl<
            #[cfg(not(any(feature = "cuda", feature = "opencl")))] F: PrimeField,
            #[cfg(any(feature = "cuda", feature = "opencl"))] F: PrimeField + ec_gpu::GpuName,
            A: Arity<F>,
        > BatchHasher<F, A> for Batcher<F, A>

won't be needed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ edition = "2021"
 [dependencies]
 bitvec = { version = "1", default-features = false, optional = true }
 byteorder = { version = "1", default-features = false, optional = true }
+ec-gpu = { version = "0.2.0", optional = true }
 ff_derive = { version = "0.12", path = "ff_derive", optional = true }
 rand_core = { version = "0.6", default-features = false }
 subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
@@ -29,6 +30,7 @@ std = ["alloc"]
 # with MSRV 1.60 this could be merged into bits with ff_derive?/bits
 # see PR#72 for more information.
 derive_bits = ["bits", "ff_derive/bits"]
+gpu = ["ec-gpu"]
 
 [[test]]
 name = "derive"
