--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rand_core = { version = "0.6", default-features = false }
 subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
 
 [dev-dependencies]
+blake2b_simd = "1"
 rand = "0.8"
 
 [features]
