--- a/ff_derive/Cargo.toml
+++ b/ff_derive/Cargo.toml
@@ -15,6 +15,8 @@ edition = "2021"
 [features]
 # enabled when generating bitvec code utilizing the version of ff's bitvec
 bits = []
+# enabled when generating zeroize code utilizing the version of ff's zeroize
+zero = []
 
 [lib]
 proc-macro = true
