--- a/ff_derive/Cargo.toml
+++ b/ff_derive/Cargo.toml
@@ -16,7 +16,7 @@ edition = "2021"
 # enabled when generating bitvec code utilizing the version of ff's bitvec
 bits = []
 # enabled when generating zeroize code utilizing the version of ff's zeroize
-zero = []
+zeroize = []
 
 [lib]
 proc-macro = true
