Apply suggestions from code review
Co-authored-by: str4d <thestr4d@gmail.com>

--- a/ff_derive/Cargo.toml
+++ b/ff_derive/Cargo.toml
@@ -15,7 +15,7 @@ edition = "2021"
 [features]
 # enabled when generating bitvec code utilizing the version of ff's bitvec
 bits = []
-# enabled when generating zeroize code utilizing the version of ff's zeroize
+# enabled when generating zeroize bindings
 zeroize = []
 
 [lib]
