chore: allow more subtle versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ bitvec = { version = "1", default-features = false, optional = true }
 byteorder = { version = "1", default-features = false, optional = true }
 ff_derive = { version = "0.12", path = "ff_derive", optional = true }
 rand_core = { version = "0.6", default-features = false }
-subtle = { version = ">=2.2.0,<2.6.0", default-features = false, features = ["i128"] }
+subtle = { version = ">=2.6.0", default-features = false, features = ["i128"] }
 
 [dev-dependencies]
 rand = "0.8"
