--- a/ff_derive/Cargo.toml
+++ b/ff_derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ff_derive"
-version = "0.13.1"
+version = "0.14.0-pre.0"
 authors = [
     "Sean Bowe <ewillbefull@gmail.com>",
     "Jack Grigg <thestr4d@gmail.com>",
